Silence some analyzer warnings https://bugs.webkit.org/show_bug.cgi?id=110281

Reviewed by Mark Hahnenberg.

The static analyzer believes that callerCodeBlock can be null,
based on other code performing null tests.  This should not
ever be the case, but we'll add RELEASE_ASSERTs to make it
obvious if we're ever wrong.

* interpreter/Interpreter.cpp:
(JSC::getCallerInfo):

Canonical link: https://commits.webkit.org/128593@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143411 268f45cc-cd09-0410-ab3c-d52691b4dbfc